--- a/bench/charts/index.html
+++ b/bench/charts/index.html
@@ -21,10 +21,15 @@
   </p>
 
   <script id="json-data" type="application/json" charset="utf-8">
-    {
-      "options": {"duration":1.0,"mem stats":false,"sys mem stats":false},
-        "tests": {"BenchfellaBench":{"binary test 1":{"elapsed":1164951,"n":100000000},"binary test 10":{"elapsed":1160016,"n":100000000},"binary test 100":{"elapsed":1149756,"n":100000000},"binary test 1000":{"elapsed":1179581,"n":100000000},"slice test 1":{"elapsed":1694446,"n":50000},"slice test 10":{"elapsed":1524992,"n":5000},"slice test 100":{"elapsed":1786319,"n":500},"slice test 1000":{"elapsed":1665021,"n":50}},"ListBench":{"reverse list 1":{"elapsed":3035891,"n":100000000},"reverse list 10":{"elapsed":8123431,"n":100000000},"reverse list 100":{"elapsed":3811328,"n":10000000},"reverse list 1000":{"elapsed":2149784,"n":500000},"reverse list 10000":{"elapsed":2086763,"n":50000}},"StringBench":{"reverse string 1":{"elapsed":6861238,"n":10000000},"reverse string 10":{"elapsed":3066431,"n":500000},"reverse string 100":{"elapsed":3114648,"n":50000},"reverse string 1000":{"elapsed":3411026,"n":5000},"reverse string 10000":{"elapsed":3451803,"n":500}}}
+{"slice_snapshot.txt": {
+  "options": {"duration":0.5,"mem stats":false,"sys mem stats":false},
+    "tests": {"StringSlice":{"slice negative both 1":{"elapsed":1199248,"n":500000},"slice negative both 10":{"elapsed":902993,"n":20000},"slice negative both 1000":{"elapsed":901375,"n":200},"slice negative left 1":{"elapsed":555364,"n":100000},"slice negative left 10":{"elapsed":856986,"n":20000},"slice negative left 1000":{"elapsed":921973,"n":200},"slice negative right 1":{"elapsed":1291656,"n":500000},"slice negative right 10":{"elapsed":513690,"n":10000},"slice negative right 1000":{"elapsed":622217,"n":100},"slice positive 1":{"elapsed":1658584,"n":500000},"slice positive 10":{"elapsed":1683429,"n":500000},"slice positive 1000":{"elapsed":1683045,"n":500000}}}
     }
+    ,"slice_snapshot_faster.txt": {
+      "options": {"duration":0.5,"mem stats":false,"sys mem stats":false},
+        "tests": {"StringSlice":{"slice negative both 1":{"elapsed":3614545,"n":10000000},"slice negative both 10":{"elapsed":3580604,"n":10000000},"slice negative both 1000":{"elapsed":3588000,"n":10000000},"slice negative left 1":{"elapsed":638549,"n":100000},"slice negative left 10":{"elapsed":808447,"n":20000},"slice negative left 1000":{"elapsed":803705,"n":200},"slice negative right 1":{"elapsed":2067261,"n":500000},"slice negative right 10":{"elapsed":1637198,"n":50000},"slice negative right 1000":{"elapsed":1687918,"n":500},"slice positive 1":{"elapsed":1698720,"n":500000},"slice positive 10":{"elapsed":1732536,"n":500000},"slice positive 1000":{"elapsed":1693381,"n":500000}}}
+        }
+        }
   </script>
 
   <script src="ui.js" type="text/javascript" charset="utf-8"></script>
