--- a/bench/charts/index.html
+++ b/bench/charts/index.html
@@ -29,7 +29,11 @@
       "options": {"duration":0.5,"mem stats":false,"sys mem stats":false},
         "tests": {"StringSlice":{"slice negative both 1":{"elapsed":3614545,"n":10000000},"slice negative both 10":{"elapsed":3580604,"n":10000000},"slice negative both 1000":{"elapsed":3588000,"n":10000000},"slice negative left 1":{"elapsed":638549,"n":100000},"slice negative left 10":{"elapsed":808447,"n":20000},"slice negative left 1000":{"elapsed":803705,"n":200},"slice negative right 1":{"elapsed":2067261,"n":500000},"slice negative right 10":{"elapsed":1637198,"n":50000},"slice negative right 1000":{"elapsed":1687918,"n":500},"slice positive 1":{"elapsed":1698720,"n":500000},"slice positive 10":{"elapsed":1732536,"n":500000},"slice positive 1000":{"elapsed":1693381,"n":500000}}}
         }
-        }
+        ,"slice_snapshot_misc.txt": {
+          "options": {"duration":0.5,"mem stats":false,"sys mem stats":false},
+            "tests": {"StringSlice":{"slice negative both 1":{"elapsed":3475856,"n":10000000},"slice negative both 10":{"elapsed":3589893,"n":10000000},"slice negative both 1000":{"elapsed":3508495,"n":10000000},"slice negative left 1":{"elapsed":649647,"n":100000},"slice negative left 10":{"elapsed":867039,"n":20000},"slice negative left 1000":{"elapsed":757155,"n":200},"slice negative right 1":{"elapsed":2064162,"n":500000},"slice negative right 10":{"elapsed":1632363,"n":50000},"slice negative right 1000":{"elapsed":1593333,"n":500},"slice positive 1":{"elapsed":1757882,"n":500000},"slice positive 10":{"elapsed":1760076,"n":500000},"slice positive 1000":{"elapsed":1735677,"n":500000}}}
+            }
+            }
   </script>
 
   <script src="ui.js" type="text/javascript" charset="utf-8"></script>
